Exercise2 initial commit

--- a/Exercise1/wholeDesign_summary.html
+++ b/Exercise1/wholeDesign_summary.html
@@ -2,11 +2,12 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>wholeDesign Project Status (05/08/2019 - 19:07:36)</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>wholeDesign Project Status (05/08/2019 - 19:05:23)</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>Exercise1.xise</TD>
 <TD BGCOLOR='#FFFF99'><b>Parser Errors:</b></TD>
+<TD> No Errors </TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Module Name:</B></TD>
@@ -406,5 +407,5 @@ System Settings</A>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 05/08/2019 - 19:07:36</center>
+<br><center><b>Date Generated:</b> 05/12/2019 - 14:58:29</center>
 </BODY></HTML>
